[gd_scene load_steps=14 format=3 uid="uid://ckw6bd8a72tum"]

[ext_resource type="Theme" uid="uid://leiuhrufh5o8" path="res://theme/theme.tres" id="1_nq85o"]
[ext_resource type="Script" path="res://gui/pomodoro_timer_container.gd" id="2_6bsd6"]
[ext_resource type="Script" path="res://timers/pomodoro_state_machine/state_machine.gd" id="2_8h7i8"]
[ext_resource type="Script" path="res://gui/time_remaining_label.gd" id="3_cod8j"]
[ext_resource type="Texture2D" uid="uid://c1avhvgbpp5di" path="res://addons/images/kenney_icons/right.png" id="5_qrp43"]
[ext_resource type="Texture2D" uid="uid://cwjn2up7w5c3" path="res://addons/images/kenney_icons/previous.png" id="6_wlngn"]
[ext_resource type="Texture2D" uid="uid://b21tp1ekqqfq1" path="res://addons/images/kenney_icons/pause.png" id="7_4b0t7"]
[ext_resource type="Texture2D" uid="uid://dgov4kg5io00y" path="res://addons/images/kenney_icons/next.png" id="8_w7v3y"]
[ext_resource type="Texture2D" uid="uid://ldmdhpth6b1" path="res://addons/images/kenney_icons/stop.png" id="9_fqhqh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8awij"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8m0aa"]
bg_color = Color(0.36, 0.36, 0.36, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bueh"]
content_margin_left = 4.0
bg_color = Color(0.4851, 0.637047, 0.77, 1)
corner_radius_top_left = 100
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 100

[sub_resource type="Theme" id="Theme_4ijq2"]

[node name="PomodoroTimerContainer" type="PanelContainer"]
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme = ExtResource("1_nq85o")
script = ExtResource("2_6bsd6")

[node name="PomodoroTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 7.0
one_shot = true

[node name="GUIVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1
script = ExtResource("3_cod8j")

[node name="HBoxContainer" type="PanelContainer" parent="GUIVBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_8awij")

[node name="PausedLabel" type="Label" parent="GUIVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Paused"

[node name="RoundLabel" type="Label" parent="GUIVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_nq85o")
theme_override_font_sizes/font_size = 28
text = "1/4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProductivityStateLabel" type="Label" parent="GUIVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Break
"
horizontal_alignment = 2

[node name="TimeRemainingLabel" type="Label" parent="GUIVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
theme = ExtResource("1_nq85o")
theme_override_font_sizes/font_size = 93
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="ProgressBar" type="ProgressBar" parent="GUIVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/background = SubResource("StyleBoxFlat_8m0aa")
theme_override_styles/fill = SubResource("StyleBoxFlat_3bueh")
value = 50.0
show_percentage = false

[node name="Buttons" type="HBoxContainer" parent="GUIVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_stretch_ratio = 0.7
theme_override_constants/separation = 15
alignment = 1

[node name="StartButton" type="Button" parent="GUIVBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("1_nq85o")
theme_type_variation = &"GreenButton"
text = "
"
icon = ExtResource("5_qrp43")
icon_alignment = 1

[node name="GoBackButton" type="Button" parent="GUIVBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("1_nq85o")
theme_type_variation = &"PurpleButton"
icon = ExtResource("6_wlngn")
icon_alignment = 1

[node name="PauseButton" type="Button" parent="GUIVBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("1_nq85o")
theme_type_variation = &"YellowButton"
text = "
"
icon = ExtResource("7_4b0t7")
icon_alignment = 1

[node name="SkipButton" type="Button" parent="GUIVBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("1_nq85o")
theme_type_variation = &"PurpleButton"
icon = ExtResource("8_w7v3y")
icon_alignment = 1

[node name="StopButton" type="Button" parent="GUIVBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Reset"
mouse_default_cursor_shape = 2
theme = SubResource("Theme_4ijq2")
theme_type_variation = &"RedButton"
icon = ExtResource("9_fqhqh")
icon_alignment = 1

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_8h7i8")

[connection signal="timeout" from="PomodoroTimer" to="StateMachine" method="_on_pomodoro_timer_timeout"]
[connection signal="round_changed" from="StateMachine" to="." method="_on_state_machine_round_changed"]
[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]
